[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/important/souperframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://assets/scripts/bosstext.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/sfx/sfx_punch4.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/sfx/sfx_punch6.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/sfx/sfx_punch5.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/scripts/randompitch.gd" type="Script" id=6]
[ext_resource path="res://assets/sound/sfx/sfx_punch3.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/sfx/sfx_punch1.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/sfx/sfx_punch2.wav" type="AudioStream" id=9]

[sub_resource type="Shader" id=21]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;




void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
	
}"

[sub_resource type="ShaderMaterial" id=22]
shader = SubResource( 21 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="CapsuleShape2D" id=23]
radius = 13.5
height = 83.7143

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 53, 10 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 56, 43 )

[sub_resource type="CircleShape2D" id=26]
radius = 37.0135

[node name="bosstest" type="KinematicBody2D"]
collision_layer = 10
collision_mask = 10
script = ExtResource( 2 )

[node name="animation" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 22 )
rotation = 0.00151305
scale = Vector2( 0.56, 0.56 )
frames = ExtResource( 1 )
animation = "mach3old"
frame = 1
playing = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, 14 )
scale = Vector2( 0.56, 0.56 )
shape = SubResource( 23 )

[node name="hurtpart" type="RigidBody2D" parent="."]
collision_layer = 512
collision_mask = 512
mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtpart"]
position = Vector2( 0, 16 )
shape = SubResource( 24 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 3 )
shape = SubResource( 25 )

[node name="hitcheck" type="Area2D" parent="."]
position = Vector2( -1, 7 )
collision_layer = 128
collision_mask = 128

[node name="check" type="CollisionShape2D" parent="hitcheck"]
modulate = Color( 0.360784, 1, 0, 1 )
shape = SubResource( 26 )

[node name="hurt1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -6.55
bus = "SFX"
script = ExtResource( 6 )

[node name="hurt2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -10.92
bus = "SFX"
script = ExtResource( 6 )

[node name="hurt3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 6 )

[node name="hurt4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 6 )

[node name="hurt5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 6 )

[node name="hurt6" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 6 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
